# GOAP

./: README.md  astar.py  demo.blend  demo.py  enums.py  fsm.py  goap.py  memory.py  planner.py  priority_queue.py  pyproject.toml  setup.py  state.py  visualise.py
.github/workflows/: main.yml
demos/: ammo.egg  demo.blend  demo.py  demo_advanced.py  demo_bge.py  demo_panda.py  player.egg  suzanne.egg
examples/: 01-haunting.py  02-services.py  03-references.py
game/: demo_panda.py  player.py  sensors.py  todo.md
goap/: __init__.py  action.py  astar.py  director.py  enums.py  fsm.py  memory.py  planner.py  priority_queue.py  sensors.py  utils.py  visualise.py
goap/algo/: __init__.py  astar.py
goap/planner/: __init__.py  plan.py  regressive_astar.py
tests/: test_issue_2.py  test_issue_7.py  test_reference.py  test_service.py  util.py
