[tool.poetry]
name = "goap-ai"
version = "2.0.0"
description = "Goal oriented action programming"
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "MIT"
packages = [
    { include = "goap" }
]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = { version = ">=3.0", optional = true }
networkx = { version = ">=2.3", optional = true }

[tool.poetry.extras]
plot = ["matplotlib", "networkx"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
