[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.7,<4.0"
dependencies = []
name = "goap-ai"
version = "2.0.0"
description = "Goal oriented action programming"

[project.urls]

[project.optional-dependencies]
plot = ["matplotlib>=3.0", "networkx>=2.3"]

[tool.pdm]
includes = ["goap"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.0.0,>=6.2.5",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
